<resources>
    <string name="app_name">Pizzeria</string>
    <string name="header_logo">RU Pizza</string>
    <string name="ru_pizza">RU Pizza</string>
    <string name="group25">Group25</string>
    <string name="ru_pizzaa">RU PIZZA</string>
    <string name="speciality_pizza">Speciality Pizza</string>
    <string name="build_your_own">Build Your Own</string>
    <string name="current_orders">Current Orders</string>
    <string name="store_orders">Store Orders</string>
    <string name="group_25">Group 25</string>
    <string name="toppings">Toppings: …</string>
    <string name="toppingss">Toppings:</string>
    <string name="price">Price:</string>
    <string name="pizza_name">Pizza Name:</string>
    <string name="menu">menu</string>
    <string name="extra_cheese">Extra Cheese</string>
    <string name="extra_sauce">Extra Sauce</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="tomato_sauce">Tomato Sauce</string>
    <string name="alfredo_sauce">Alfredo Sauce</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="all_toppings">All Toppings</string>
    <string name="selected_toppings">Selected Toppings</string>
    <string name="build_your_own_logo">Build Your Own</string>
    <string name="price_bo">Price:</string>
    <string name="zero_price">0.00</string>
    <string name="price_in_dollars">Price: $</string>
    <string name="pizza_size_image">pizza size image</string>
    <string name="sauce_recycle">Sauce:</string>
    <!--current order strings-->
    <string name="current_order_title">Current Order</string>
    <!--current order recycler item-->
    <!--    pizza_name exists-->
    <string name="size">size:</string>
    <!--store order items-->
    <string name="store_order_title">Store Order</string>
    <!--Specialty pizza variables-->
    <string-array name="all_speciality_pizza">
        <item>Deluxe</item>
        <item>Meatzza</item>
        <item>Pepperoni</item>
        <item>Seafood</item>
        <item>Supreme</item>
        <item>Hawaiian</item>
        <item>Margherita</item>
        <item>MeatLovers</item>
        <item>Veggie</item>
        <item>Whiskey</item>
    </string-array>
</resources>