<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="5dp">

    <include layout="@layout/header_bo"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_bo01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".1"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_bo02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".45"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_bo03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".52"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_bo04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".4"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_bo05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".6"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="10dp"
        android:padding="8dp"
        android:background="@drawable/rounded_corner_two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guide_line_bo03"
        app:layout_constraintTop_toBottomOf="@id/guide_line_bo01"
        app:layout_constraintBottom_toTopOf="@id/guide_line_bo02">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/inner_gl_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent=".9"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/inner_gl_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent=".95"
            android:orientation="horizontal"/>


        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/size_select_bo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="10dp"
            app:layout_constraintEnd_toEndOf="@id/inner_gl_01" />

        <RadioGroup
            android:layout_marginTop="10dp"
            android:id="@+id/radio_group_bo_sauce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/inner_gl_01"
            app:layout_constraintTop_toBottomOf="@+id/size_select_bo">
            <RadioButton
                android:textColor="@color/primaryColor"
                android:fontFamily="@font/lobster_regular"
                android:id="@+id/radio_btn_tomato"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/tomato_sauce"/>
            <RadioButton
                android:textColor="@color/primaryColor"
                android:textStyle="bold"
                android:fontFamily="@font/lobster_regular"
                android:id="@+id/radio_btn_alfredo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alfredo_sauce"/>
        </RadioGroup>

        <CheckBox
            android:fontFamily="@font/lobster_regular"
            android:textColor="@color/primaryColor"
            android:id="@+id/ec_checkbox"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/inner_gl_02"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/es_checkbox"
            android:text="@string/extra_cheese"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/radio_group_bo_sauce"
            />

        <CheckBox
            android:textColor="@color/primaryColor"
            android:fontFamily="@font/lobster_regular"
            android:textStyle="bold"
            android:id="@+id/es_checkbox"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/inner_gl_02"
            app:layout_constraintStart_toEndOf="@id/ec_checkbox"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/extra_sauce"
            app:layout_constraintTop_toBottomOf="@id/radio_group_bo_sauce"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_bo06"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".82"
        android:orientation="horizontal"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_bo08"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".52"/>

    <TextView
        android:layout_margin="8dp"
        android:id="@+id/all_topping_header"
        android:textStyle="bold"
        android:letterSpacing=".1"
        android:textColor="@color/primaryColor"
        android:textSize="15sp"
        android:fontFamily="@font/lobster_regular"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guide_line_bo04"
        app:layout_constraintTop_toBottomOf="@id/guide_line_bo02"
        app:layout_constraintBottom_toTopOf="@id/guide_line_bo08"
        android:text="@string/all_toppings"
        android:padding="8dp" />

    <ListView
        android:layout_margin="5dp"
        android:id="@+id/all_toppings_listview"
        android:background="@drawable/rounded_corner_two"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guide_line_bo04"
        app:layout_constraintTop_toBottomOf="@id/guide_line_bo08"
        app:layout_constraintBottom_toTopOf="@id/guide_line_bo06"
        android:divider="@android:color/transparent"
        android:dividerHeight="8dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/btnline01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".61"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/btnline02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".69"
        android:orientation="horizontal"/>

    <Button
        android:id="@+id/addbtn"
        android:textSize="12sp"
        android:layout_margin="9dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/guide_line_bo08"
        app:layout_constraintBottom_toTopOf="@id/btnline01"
        app:layout_constraintStart_toStartOf="@id/guide_line_bo04"
        app:layout_constraintEnd_toEndOf="@id/guide_line_bo05"
        android:elevation="8dp"
        android:shadowColor="@color/accentColor"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/add"
        android:background="@drawable/button_selector" />

    <Button
        android:id="@+id/removebtn"
        android:elevation="7dp"
        android:shadowColor="@color/accentColor"
        android:textSize="12sp"
        android:layout_width="0dp"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/btnline01"
        app:layout_constraintBottom_toTopOf="@id/btnline02"
        app:layout_constraintStart_toStartOf="@id/guide_line_bo04"
        app:layout_constraintEnd_toEndOf="@id/guide_line_bo05"
        android:fontFamily="@font/montserrat_bold"
        android:layout_height="0dp"
        android:text="@string/remove"
        android:background="@drawable/button_selector" />

    <TextView
        android:layout_margin="8dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:letterSpacing=".1"
        app:layout_constraintStart_toStartOf="@id/guide_line_bo05"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guide_line_bo02"
        app:layout_constraintBottom_toTopOf="@id/guide_line_bo08"
        android:textColor="@color/primaryColor"
        android:fontFamily="@font/lobster_regular"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/selected_toppings"
        android:gravity="center"
        android:padding="8dp" />

    <ListView
        android:background="@drawable/rounded_corner_two"
        android:id="@+id/selected_toppings_listview"
        android:layout_margin="5dp"
        app:layout_constraintStart_toStartOf="@id/guide_line_bo05"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guide_line_bo08"
        app:layout_constraintBottom_toTopOf="@id/guide_line_bo06"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="8dp" />


    <ImageView
        android:contentDescription="@string/pizza_size_image"
        android:id="@+id/image_pizza_size_bo"
        android:layout_width="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/guide_line_bo03"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guide_line_bo01"
        app:layout_constraintBottom_toTopOf="@id/guide_line_bo02"
        />

    <TextView
        android:textStyle="bold"
        android:fontFamily="@font/ubuntu_bold"
        android:textSize="20sp"
        android:id="@+id/label_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_in_dollars"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/text_view_price"
        app:layout_constraintTop_toBottomOf="@id/guide_line_bo06"
        app:layout_constraintBottom_toBottomOf="@id/guide_line_bo07"
        />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_bo07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".95"
        android:orientation="horizontal"/>
    <!-- Price TextView -->
    <TextView
        android:fontFamily="@font/ubuntu_bold"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/text_view_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero_price"
        app:layout_constraintStart_toEndOf="@id/label_price"
        app:layout_constraintEnd_toEndOf="@id/guide_line_bo04"
        app:layout_constraintTop_toBottomOf="@id/guide_line_bo06"
        app:layout_constraintBottom_toBottomOf="@id/guide_line_bo07" />


    <Button
        android:id="@+id/confirm_btn_bo"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector"
        android:elevation="10dp"
        android:fontFamily="@font/montserrat_bold"
        android:shadowColor="@color/accentColor"
        android:backgroundTint="@color/secondaryColor"
        android:text="@string/confirm_order"
        app:layout_constraintStart_toStartOf="@id/guide_line_bo03"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guide_line_bo06"
        app:layout_constraintBottom_toBottomOf="@id/guide_line_bo07"/>



</androidx.constraintlayout.widget.ConstraintLayout>